name:                haskell-benchmark
version:             0.1.0.0
synopsis:            Haskell hsnsq benchmark.
homepage:            https://github.com/gamelost/nsq-benchmarks
license:             Apache-2.0
license-file:        LICENSE
author:              Paul Berens
maintainer:          berens.paul@gmail.com
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable haskell-benchmark
  main-is:             Benchmark.hs
  default-language:    Haskell2010
  ghc-options:        -Wall -fno-warn-missing-signatures -O2 -rtsopts -with-rtsopts=-T -threaded -eventlog
  hs-source-dirs:      haskell
  build-depends:
        base >=4.5 && <4.8,
        bytestring <0.11,
        attoparsec <0.13,
        attoparsec-binary <0.3,
        aeson <0.9,
        pipes <4.2,
        pipes-attoparsec <0.6,
        pipes-network <0.7,
        network <2.6,
        text <1.2,
        mtl <2.3,
        containers <0.6,
        stm-chans <3.1,
        stm <2.5,
        async <2.1,
        hslogger <1.3,
        hostname <1.1,
        hsnsq == 0.1.2.0,
        optparse-applicative,
        old-locale,
        time
